--- a/.github/workflows/gh-pages-releases.yml
+++ b/.github/workflows/gh-pages-releases.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   scrape_and_publish_releases:
     name: "Scrape and publish releases"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     # Don't run this in everyone's forks.
     if: github.repository == 'llvm/torch-mlir'
