Add support to lower backend-legal operations as TOSA CustomOps
Add a "backends.tosa" module for specifiying backend-custom-ops
 - These operations will be converted to CustomOps

--- a/lib/Conversion/TorchToTosa/CMakeLists.txt
+++ b/lib/Conversion/TorchToTosa/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_mlir_conversion_library(TorchMLIRTorchToTosa
+  TorchBackendLegalToTosaCustom.cpp
   TorchToTosa.cpp
   TosaLegalizeUtils.cpp
   TosaLegalizeCommon.cpp
