--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -51,6 +51,7 @@ declare_mlir_python_sources(TorchMLIRPythonSources.TopLevel
   SOURCES
     __init__.py
     compiler_utils.py
+    backends/tosa/__init__.py
 )
 
 declare_mlir_python_sources(TorchMLIRPythonSources.Dialects
