[Tcp] Enable Tcp to Linalg conversion pass when TORCH_MLIR_ENABLE_TCP is set

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -25,6 +25,7 @@ if(TORCH_MLIR_ENABLE_MHLO)
 endif()
 if(TORCH_MLIR_ENABLE_TCP)
   list(APPEND linked_libs TorchMLIRTorchToTcp)
+  list(APPEND linked_libs TorchMLIRTcpToLinalg)
 endif()
 
 add_mlir_library(TorchMLIRConversionPasses
