Buildifier usage to docs

--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -12,6 +12,7 @@ package(
 )
 
 # Format bazel BUILD and .bzl files with a standard convention
+# Invoke as `bazel run @torch-mlir//:buildifier`
 buildifier(
     name = "buildifier",
 )
