--- a/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
+++ b/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
@@ -8,6 +8,7 @@ set(LinkedLibs  MLIRIR
                 TorchMLIRTorchToTMTensor
                 TorchMLIRTorchToArith
                 TorchMLIRTorchToSCF
+                TorchMLIRTorchConversionToMLProgram
                 MLIRMemRefTransforms)
                 
 if(TORCH_MLIR_ENABLE_MHLO)
