--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -65,11 +65,15 @@ jobs:
     - name: Copy releases to publish to dist directory
       if: github.event.inputs.release_id != ''
       run: cp build_tools/python_deploy/wheelhouse/torch_mlir-*.whl dist/
-    - name: Publish to PyPI
-      if: github.event.inputs.release_id != ''
-      uses: pypa/gh-action-pypi-publish@v1.5.1
+
+    # Wheels must be published from a linux environment.
+    #
+    # See https://github.com/pypa/gh-action-pypi-publish/discussions/15
+    - name: Store the binary wheel
+      uses: actions/upload-artifact@v2
       with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        name: wheels
+        path: dist
 
   build_macos:
     name: MacOS Build
@@ -112,11 +116,24 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.WORKFLOW_INVOCATION_TOKEN }}
       with:
         release_id: ${{ github.event.inputs.release_id }}
-    - name: Publish to PyPI
+    - name: DEBUG List Files
       if: github.event.inputs.release_id != ''
-      uses: pypa/gh-action-pypi-publish@v1.5.1
+      run: find .
+    - name: Create dist directory
+      if: github.event.inputs.release_id != ''
+      run: mkdir dist
+    - name: Copy releases to publish to dist directory
+      if: github.event.inputs.release_id != ''
+      run: cp build_tools/python_deploy/wheelhouse/torch_mlir-*.whl dist/
+
+    # Wheels must be published from a linux environment.
+    #
+    # See https://github.com/pypa/gh-action-pypi-publish/discussions/15
+    - name: Store the binary wheel
+      uses: actions/upload-artifact@v2
       with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        name: wheels
+        path: dist
 
   build_windows:
     name: Windows Build
@@ -160,6 +177,24 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.WORKFLOW_INVOCATION_TOKEN }}
       with:
         release_id: ${{ github.event.inputs.release_id }}
+    - name: DEBUG List Files
+      if: github.event.inputs.release_id != ''
+      run: find .
+    - name: Create dist directory
+      if: github.event.inputs.release_id != ''
+      run: mkdir dist
+    - name: Copy releases to publish to dist directory
+      if: github.event.inputs.release_id != ''
+      run: cp build_tools/python_deploy/wheelhouse/torch_mlir-*.whl dist/
+
+    # Wheels must be published from a linux environment.
+    #
+    # See https://github.com/pypa/gh-action-pypi-publish/discussions/15
+    - name: Store the binary wheel
+      uses: actions/upload-artifact@v2
+      with:
+        name: wheels
+        path: dist
 
   publish_releases:
     runs-on: ubuntu-latest
@@ -177,3 +212,16 @@ jobs:
       with:
         workflow: Publish releases page
         token: ${{ secrets.WORKFLOW_INVOCATION_TOKEN }}
+
+    # Wheels must be published from a linux environment.
+    #
+    # See https://github.com/pypa/gh-action-pypi-publish/discussions/15
+    - name: Download wheels for publishing to PyPI
+      uses: actions/download-artifact@v3
+      with:
+        name: wheels
+    - name: Publish to PyPI
+      if: github.event.inputs.release_id != ''
+      uses: pypa/gh-action-pypi-publish@v1.5.1
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
