--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -177,9 +177,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.WORKFLOW_INVOCATION_TOKEN }}
       with:
         release_id: ${{ github.event.inputs.release_id }}
-    - name: DEBUG List Files
-      if: github.event.inputs.release_id != ''
-      run: find .
     - name: Create dist directory
       if: github.event.inputs.release_id != ''
       run: mkdir dist
@@ -220,6 +217,9 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: wheels
+        path: dist
+    - name: DEBUG List Files
+      run: find .
     - name: Publish to PyPI
       if: github.event.inputs.release_id != ''
       uses: pypa/gh-action-pypi-publish@v1.5.1
