ci: print ccache statistics and configuration at end of CI run
There appear to be two problems with the caching layer in our CI runs:
(a) the sizes of some of the caches have grown to multiples of the
300 MB limit and (b) caching on Windows seems to be provide little to no
benefit.

To help understand the reasons for these problems, this patch adds a
line item to the list of steps run in CI to dump the ccache
configuration and statistics just prior to uploading the cache artifact.

--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -128,3 +128,7 @@ jobs:
       if: ${{ matrix.os-arch == 'windows-x86_64' }}
       shell: bash
       run: ./build_tools/python_deploy/build_windows_ci.sh
+
+    - name: Print ccache configuration and statistics
+      shell: bash
+      run: ccache --show-config --show-stats --print-stats
