--- a/utils/bazel/torch-mlir-overlay/test/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/test/BUILD.bazel
@@ -24,6 +24,7 @@ expand_template(
         "@MLIR_ENABLE_BINDINGS_PYTHON@": "0",
         "@TORCH_MLIR_ENABLE_JIT_IR_IMPORTER@": "0",
         "@TORCH_MLIR_ENABLE_MHLO@": "0",
+        "@TORCH_MLIR_ENABLE_TCP@": "0",
     },
     template = "lit.site.cfg.py.in",
 )
