--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -517,6 +517,7 @@ cc_library(
     strip_include_prefix = "include",
     deps = [
         ":TorchMLIRConversionPassesIncGen",
+        ":TorchMLIRConversionUtils",
         ":TorchMLIRTorchBackendTypeConversion",
         ":TorchMLIRTorchConversionDialect",
         "@llvm-project//mlir:Dialect",
