CI: miscellaneous fixes for Release builds
 - Use v3 of actions/checkout, since the version we use (v2) uses
   Node.js 12, which is deprecated by GitHub.

 - Source the PowerShell venv sctipt (instead of the bash sript) since
   the calling script is a PowerShell script.  Without this, the build
   doesn't use venv at all.

 - Make the build dependencies in whl-requirements.txt (used by
   setup.py) match those in requirements.txt.  To that end, this patch
   creates a build-requirements.txt that is referenced by
   requirements.txt and whl-requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,4 @@
--r pytorch-requirements.txt
-
-numpy
-
-# Build requirements.
-pybind11
-wheel
-setuptools
-cmake
-ninja
-
-# Workaround for what should be a torch dep
-# See discussion in #1174
-pyyaml
+-r build-requirements.txt
 
 # Test Requirements
 pillow
